# opntrmnl

./: Cargo.toml  LICENSE  README.md
src/: http.rs  main.rs
src/database/: mod.rs  playlist.rs  plugin.rs
src/plugins/: error.rs  mod.rs  rss.rs  text.rs
templates/plugins/: error.jinja  rss.jinja  text.html  text.jinja
templates/plugins/_base/: base.jinja  scaffold.html  scaffold.jinja
