[package]
name = "trmnl-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
actix-web = "4"
tokio = { version = "1.44.0", features = ["full"] }
askama = "0.12.1"
reqwest = "0.12.14"
rss_parser = { version = "2.0.12", package = "rss" }
